KFileitem: Use internal permissions as best case scenario

BUG: 477526
BUG: 483436